# letta-rl-agents

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  letta_rl.db  pyproject.toml  run.py
agents/: __init__.py  executor.py  skill_loader.py
scripts/: generate_embeddings.py  run_eval.py  seed_skills.py
skills/: api-integration.md  data-processing.md  database-operations.md  debugging.md  error-handling.md  file-operations.md  git-operations.md  pdf-generation.md  testing.md  text-processing.md  web-scraping.md
src/agents/: client.py  letta_rl.py
src/api/: __init__.py  schemas.py  server.py
src/api/routes/: __init__.py  metrics.py  skills.py  tasks.py  training.py
src/db/: __init__.py  models.py  session.py
src/selector/: __init__.py  buffer.py  embeddings.py  policy.py  trainer.py
src/skills/: __init__.py  repository.py  transfer.py
src/tracker/: __init__.py  analytics.py  quality.py
tests/: __init__.py  conftest.py  test_policy.py  test_selector.py  test_tracker.py
ui/: dashboard.py
